# strix

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
strix/telemetry/: tracer.py
strix/tools/agents_graph/: agents_graph_actions.py
tests/telemetry/: test_tracer.py
