[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strix"
version = "0.1.0"
description = "A lightweight task scheduling and workflow automation library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "strix contributors" },
]
keywords = ["scheduler", "workflow", "automation", "tasks", "cron"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development ::n    "anyio>=3.6",
    "rich>=13.0",
]

[project.optional-dependencies]
dev0",
    "pre-commit>=3.0",
]

[project.scripts]
strix = "strix.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/strix"
Repository = "https://github.com/yourusername/strix"
Issues = "https://github.com/yourusername/strix/issues"
Changelog = "https://github.com/yourusername/strix/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/strix"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/strix --cov-report=term-missing"

[tool.coverage.run]
source = ["src/strix"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
